[package]
name = "mdvh-agent-probe"
version = "0.1.11"
edition.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
